[gd_scene load_steps=4 format=3 uid="uid://dy35p4ooig37s"]

[ext_resource type="Theme" uid="uid://c043uyufavnx4" path="res://ui_theme/ui_theme.tres" id="1_fgay1"]
[ext_resource type="Script" path="res://ui/map.gd" id="1_k5yi0"]
[ext_resource type="Texture2D" uid="uid://brdc3gjn6edje" path="res://assets/custom/map.png" id="3_iu1r5"]

[node name="Map" type="Control"]
top_level = true
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fgay1")
script = ExtResource("1_k5yi0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.235294, 0.117647, 0.470588)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("3_iu1r5")

[node name="HomeButton" type="Button" parent="CenterContainer/TextureRect"]
layout_mode = 0
offset_left = 317.0
offset_top = 228.0
offset_right = 372.0
offset_bottom = 259.0
text = "Home"

[node name="BakeryButton" type="Button" parent="CenterContainer/TextureRect"]
layout_mode = 0
offset_left = 155.0
offset_top = 177.0
offset_right = 211.0
offset_bottom = 201.0
text = "Bakery"

[node name="HairSalonButton" type="Button" parent="CenterContainer/TextureRect"]
layout_mode = 0
offset_left = 260.0
offset_top = 115.0
offset_right = 348.0
offset_bottom = 139.0
text = "Hair Salon"

[connection signal="pressed" from="CenterContainer/TextureRect/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="CenterContainer/TextureRect/BakeryButton" to="." method="_on_bakery_button_pressed"]
[connection signal="pressed" from="CenterContainer/TextureRect/HairSalonButton" to="." method="_on_hair_salon_button_pressed"]
